# gitlab_mcp

./: .env.example  .gitignore  README.md  pyproject.toml  server.py
server/: __init__.py  config.py  gitlab_server.py  schema.py
server/mcp_tools/: __init__.py  branch_tools.py  commit_tools.py  file_tools.py  issue_tools.py  merge_request_tools.py  project_tools.py  repo_tools.py  search_tools.py
